infrastructure/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
    nginx.ingress.kubernetes.io/rate-limit: '100'
    nginx.ingress.kubernetes.io/rate-limit-window: 1m
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  name: marabet-ingress
  namespace: marabet
spec:
  rules:
  - host: marabet.com
    http:
      paths:
      - backend:
          service:
            name: marabet-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - marabet.com
    secretName: marabet-tls
